Add Conta Azul credentials to .env.example
Added placeholders for Conta Azul credentials.

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,12 @@ NEXT_PUBLIC_SERVER_HOST=https://site.com/pasta
 # -----------------------------------------------------------------------------
 DATABASE_URL="postgresql://postgres:senhadopostgres@localhost:5432/voepdv?schema=public"
 
+# Integração Conta Azul coloque aqui suas credenciais
+
+CONTA_AZUL_CLIENT_ID=
+CONTA_AZUL_CLIENT_SECRET=
+
+
 # Se for usar subpasta no futuro (ex: /app). Se for raiz, deixe vazio.
 BASEPATH=
 
