configuração de envio de email pelo sistema

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,13 @@ CONTA_AZUL_CLIENT_SECRET=
 # Se for usar subpasta no futuro (ex: /app). Se for raiz, deixe vazio.
 BASEPATH=
 
+# Configurações de Email (Exemplo com Gmail)
+# Se usar Gmail, a senha deve ser uma "App Password" gerada na conta do Google
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=seu_email@gmail.com
+SMTP_PASSWORD=sua_senha_de_app_aqui
+EMAIL_FROM=Seu Projeto <seu_email@gmail.com>
 # -----------------------------------------------------------------------------
 # App (Configuração Automática)
 # -----------------------------------------------------------------------------
