--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@tiptap/react": "3.11.0",
     "@tiptap/starter-kit": "3.11.0",
     "apexcharts": "3.49.0",
+    "bcryptjs": "^3.0.3",
     "bootstrap-icons": "1.13.1",
     "classnames": "2.5.1",
     "cmdk": "1.1.1",
@@ -67,6 +68,7 @@
     "negotiator": "1.0.0",
     "next": "^16.1.1",
     "next-auth": "^4.24.13",
+    "nodemailer": "^7.0.12",
     "react": "19.2.0",
     "react-apexcharts": "1.4.1",
     "react-colorful": "5.6.1",
@@ -91,10 +93,12 @@
     "@iconify/types": "2.0.0",
     "@iconify/utils": "3.0.2",
     "@tailwindcss/postcss": "4.1.17",
+    "@types/bcryptjs": "^2.4.6",
     "@types/fs-extra": "11.0.4",
     "@types/mapbox-gl": "3.4.1",
     "@types/negotiator": "0.6.4",
     "@types/node": "24.10.1",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "19.2.6",
     "@types/react-dom": "19.2.3",
     "@typescript-eslint/eslint-plugin": "8.46.2",
