--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "Commercial",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
@@ -39,21 +39,22 @@
     "@mui/lab": "7.0.1-beta.19",
     "@mui/material": "7.3.5",
     "@mui/material-nextjs": "7.3.5",
-    "@prisma/client": "6.19.0",
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^7.2.0",
     "@reduxjs/toolkit": "2.10.1",
     "@tanstack/match-sorter-utils": "8.19.4",
     "@tanstack/react-table": "8.21.3",
-    "@tiptap/core": "3.11.0",
-    "@tiptap/extension-color": "3.11.0",
-    "@tiptap/extension-list": "3.11.0",
-    "@tiptap/extension-list-item": "3.11.0",
-    "@tiptap/extension-placeholder": "3.11.0",
-    "@tiptap/extension-text-align": "3.11.0",
-    "@tiptap/extension-text-style": "3.11.0",
-    "@tiptap/extension-underline": "3.11.0",
-    "@tiptap/pm": "3.11.0",
-    "@tiptap/react": "3.11.0",
-    "@tiptap/starter-kit": "3.11.0",
+    "@tiptap/core": "3.14.0",
+    "@tiptap/extension-color": "3.14.0",
+    "@tiptap/extension-list": "3.14.0",
+    "@tiptap/extension-list-item": "3.14.0",
+    "@tiptap/extension-placeholder": "3.14.0",
+    "@tiptap/extension-text-align": "3.14.0",
+    "@tiptap/extension-text-style": "3.14.0",
+    "@tiptap/extension-underline": "3.14.0",
+    "@tiptap/pm": "3.14.0",
+    "@tiptap/react": "3.14.0",
+    "@tiptap/starter-kit": "3.14.0",
     "apexcharts": "3.49.0",
     "bcryptjs": "^3.0.3",
     "bootstrap-icons": "1.13.1",
@@ -67,7 +68,7 @@
     "mapbox-gl": "3.16.0",
     "negotiator": "1.0.0",
     "next": "^16.1.1",
-    "next-auth": "^4.24.13",
+    "next-auth": "^4.24.7",
     "nodemailer": "^7.0.12",
     "qrcode": "^1.5.4",
     "react": "19.2.0",
@@ -99,8 +100,9 @@
     "@types/fs-extra": "11.0.4",
     "@types/mapbox-gl": "3.4.1",
     "@types/negotiator": "0.6.4",
-    "@types/node": "24.10.1",
+    "@types/node": "^24.10.1",
     "@types/nodemailer": "^7.0.4",
+    "@types/pg": "^8.16.0",
     "@types/qrcode": "^1.5.6",
     "@types/react": "19.2.6",
     "@types/react-dom": "19.2.3",
@@ -119,7 +121,7 @@
     "postcss": "8.5.6",
     "postcss-styled-syntax": "0.7.1",
     "prettier": "3.6.2",
-    "prisma": "6.19.0",
+    "prisma": "^7.2.0",
     "stylelint": "16.25.0",
     "stylelint-use-logical-spec": "5.0.1",
     "stylis": "4.3.6",
