--- a/.gitignore
+++ b/.gitignore
@@ -14,12 +14,13 @@
 
 # production
 /build
-
+.docker-compose.yml
 # misc
 .DS_Store
 *.pem
 
 # debug
+docker-compose.yml*
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
