pauda no projeto que deu erro no prisma + docker

--- a/package.json
+++ b/package.json
@@ -149,6 +149,7 @@
     }
   },
   "prisma": {
-    "schema": "./src/prisma/schema.prisma"
+    "schema": "./src/prisma/schema.prisma",
+    "config": "./prisma.config.ts"
   }
 }
