feat: update project references from VoePDV to VoeCRM, adjust database configurations, and add initial migration scripts

--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,10 @@
 # Se mudar o Ngrok ou for para produção, mude apenas esta linha:
 NEXT_PUBLIC_SERVER_HOST=https://site.com/pasta
 # -----------------------------------------------------------------------------
-# Database configure da seguinte forma "postgresql://usuario:senha@localhost:5432/voepdv?schema=public"
+# Database configure da seguinte forma "postgresql://usuario:senha@localhost:5432/VoeCRM?schema=public"
 # quando postgres normalmente o usuario é definido como padrão "postgres"
 # -----------------------------------------------------------------------------
-DATABASE_URL="postgresql://postgres:senhadopostgres@localhost:5432/voepdv?schema=public"
+DATABASE_URL="postgresql://postgres:senhadopostgres@localhost:5432/voecrm?schema=public"
 
 # Integração Conta Azul coloque aqui suas credenciais
 
