--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "voepdv-mui-nextjs-admin-template",
+  "name": "VoeCRM",
   "version": "5.0.1",
   "license": "Commercial",
   "private": true,
@@ -42,6 +42,7 @@
     "@mui/utils": "^7.3.5",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@reduxjs/toolkit": "2.10.1",
     "@tanstack/match-sorter-utils": "8.19.4",
     "@tanstack/react-table": "8.21.3",
