--- a/package.json
+++ b/package.json
@@ -54,6 +54,9 @@
     "@tiptap/extension-text-align": "3.14.0",
     "@tiptap/extension-text-style": "3.14.0",
     "@tiptap/extension-underline": "3.14.0",
+    "@tiptap/extension-bold": "3.14.0",
+    "@tiptap/extension-italic": "3.14.0",
+    "@tiptap/extension-strike": "3.14.0",
     "@tiptap/pm": "3.14.0",
     "@tiptap/react": "3.14.0",
     "@tiptap/starter-kit": "3.14.0",
