ajustes do docker e prisma, tentativa de resolver uns erros

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,5 +50,6 @@
     "iconify",
     "tanstack"
   ],
-  "search.useParentIgnoreFiles": true
+  "search.useParentIgnoreFiles": true,
+  "git.ignoreLimitWarning": true
 }
