--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,10 @@ services:
   postgres:
     image: postgres:15-alpine
     container_name: voecrm-db-prod
-    env_file:
-      - .env
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=voecrm
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
